Added editable text field for nickname. Created a string resource for the hint on the textfield

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,5 +4,5 @@
     <dimen name="small_padding">8dp</dimen>
     <dimen name="layout_margin">16dp</dimen>
     <dimen name="padding">24dp</dimen>
-    <dimen name="line_multiplier">1/2</dimen>
+    <dimen name="line_multiplier">1.2</dimen>
 </resources>
